src/objects/IPM_CorePara_helps_example__c.object
<CustomObject>
    <description>This object is used to store help and example of core parameter</description>
    <fields>
        <fullName>IMP_Core_Parameter_example_three__c</fullName>
        <description>store core parameter examples</description>
        <label>Core Parameter example three</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Answer__c</fullName>
        <description>Store answer of core parameters</description>
        <label>Answer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Core_Parameter_Help__c</fullName>
        <description>Store help text for core parameter</description>
        <label>Core Parameter Help</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Core_Parameter_Helps__c</fullName>
        <description>Store core parameter help text</description>
        <label>IPM_Core_Parameter_Helps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Core_Parameter_example__c</fullName>
        <description>example of core parameter</description>
        <label>Core Parameter example</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Core_Parameter_example_five__c</fullName>
        <description>store core parameter examples</description>
        <label>Core Parameter example five</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Core_Parameter_example_four__c</fullName>
        <description>store core parameter examples</description>
        <label>Core Parameter example four</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Core_Parameter_example_two__c</fullName>
        <description>store core parameter examples</description>
        <label>Core Parameter example two</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>IPM CoreParameter helps</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_Core_Parameter_example__c</columns>
        <columns>IPM_Core_Parameter_example_two__c</columns>
        <columns>IMP_Core_Parameter_example_three__c</columns>
        <columns>IPM_Core_Parameter_example_four__c</columns>
        <columns>IPM_Core_Parameter_example_five__c</columns>
        <columns>IPM_Answer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPH-{000000}</displayFormat>
        <label>IPM CoreParameter helps Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPM CoreParameter helps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>